# whispering-woods

./: .gitignore  :w  Cargo.toml  Readme.md  commands.sh  start-cluster.sh  start.sh  stop-cluster.sh  stop.sh  test-cluster.sh
client/: Cargo.toml
client/config/: container.yaml  default.yaml  development.yaml
client/src/: chunk_handler.rs  chunk_joiner.rs  command_runner.rs  datanode_service.rs  file_chunker.rs  file_handler.rs  main.rs  namenode_handler.rs  namenode_service.rs
client/src/command_runner/: delete_file_handler.rs  fetch_file_handler.rs  mod.rs  store_file_handler.rs
client/src/config/: mod.rs
client/src/namenode/: auth_intercepter.rs  mod.rs  service.rs
cluster_configs/datanode/: datanode0.yaml  datanode1.yaml  datanode2.yaml  datanode3.yaml  datanode4.yaml
dashboards/: index.html  index.js  style.css
datanode/: Cargo.toml
datanode/config/: container.yaml  default.yaml  development.yaml
datanode/src/: client_handler.rs  datanode_state.rs  main.rs  namenode_handler.rs  namenode_service.rs  peer_handler.rs  peer_service.rs  state_mantainer.rs  tcp_service.rs  tcp_stream_tee.rs
datanode/src/client/: handler.rs
datanode/src/config/: mod.rs
datanode/src/grpc/: ticket.rs
datanode/src/namenode/: auth_intercepter.rs  handler.rs  mod.rs  service.rs
datanode/src/peer/: handler.rs  service.rs
datanode/src/tcp/: mod.rs  service.rs  stream_tee.rs
docker/: Dockerfile.datanode  Dockerfile.namenode  filebeat.yml
logger/: docker-compose-ek.yml  docker-compose.yaml  setup.md
logger/es_kibana_apm_setup/: .env  (+3 more)
namenode/: Cargo.toml
namenode/config/: container.yaml  default.yaml  development.yaml  local.yaml
namenode/src/: chunk_generator.rs  client_handler.rs  data_structure.rs  datanode_handler.rs  datanode_selection_policy.rs  datanode_service.rs  main.rs  namenode_server.rs  namenode_state.rs  state_mantainer.rs
namenode/src/api_service/: mod.rs
namenode/src/api_service/controller/: auth.rs  cert_issuer.rs  mod.rs  monitoring.rs
namenode/src/api_service/middleware/: auth.rs
namenode/src/api_service/routes/: auth.rs  cert_isssuer.rs  mod.rs  monitoring.rs
namenode/src/certificates/: certificate_generator.rs  mod.rs
namenode/src/config/: mod.rs
namenode/src/datanode/: handler.rs  mod.rs  service.rs
namenode/src/datanode/selection_policy/: default_selection_policy.rs  mod.rs  selection_policy.rs
namenode/src/grpc/: auth.rs
namenode/src/ledger/: default_ledger.rs  mod.rs  recorder.rs  replayer.rs
namenode/src/namenode_state/: chunk_details.rs  datanode_details.rs  mod.rs  state_mantainer.rs  state_snapshot.rs
proto/: Cargo.toml  build.rs  client_datanode.proto  client_namenode.proto  data.proto  datanode_datanode.proto  datanode_namenode.proto  namenode_datanode.proto
storage/: Cargo.toml
utilities/: Cargo.toml
utilities/src/: grpc_channel_pool.rs  lib.rs  logger.rs  retry_policy.rs  state_logger.rs
utilities/src/auth/: authentication_error.rs  cert.rs  jwt_token.rs  mod.rs  noauth.rs  types.rs
utilities/src/data_packet/: mod.rs
utilities/src/tcp_pool/: mod.rs
utilities/src/ticket/: mod.rs  ticket_decrypter.rs  ticket_generator.rs  ticket_mint.rs  types.rs
(+7 files in other folders)
