[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.1"
tokio = { version = "1.45.0", features = ["full"] }
proto = {path="../proto"}
figment = {version="0.10.19", features=["yaml"]}
serde = { version = "1.0.219", features = ["derive"] }
utilities = {path = "../utilities"}
once_cell = "1.21.3"
