[package]
name = "datanode"
version = "0.1.0"
edition = "2024"

[dependencies]
storage = {path="../storage"}
proto = {path="../proto"}
utilities = {path="../utilities"}
tonic = "0.13.1"
tokio = { version = "1.45.0", features = ["full"] }
figment = {version="0.10.19", features=["yaml"]}
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
futures = "0.3.31"
