[package]
name = "namenode"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.1"
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "0.1.88"
uuid = { version = "1.17.0", features = ["v4"]}
proto = {path="../proto"}
utilities = {path = "../utilities"}
figment = {version="0.10.19", features=["yaml"]}
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
futures = "0.3.31"
