[package]
name = "utilities"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features=["env-filter","json"]}
tracing-appender = "0.2.3"
tokio = { version = "1.45.0", features = ["full"] }
tonic = "0.13.1"
once_cell = "1.21.3"

opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = {version="0.13.0", features=["http-proto", "reqwest-client"]}
tracing-opentelemetry = "0.21.0"
