[package]
name = "utilities"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features=["env-filter","json"]}
tracing-appender = "0.2.3"
tokio = { version = "1.45.0", features = ["full"] }
tonic = "0.13.1"
once_cell = "1.21.3"

opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = {version="0.13.0", features=["http-proto", "reqwest-client"]}
tracing-opentelemetry = "0.21.0"
serde = "1.0.219"
serde_json = "1.0.143"
jsonwebtoken = "9.3.1"
pem = "3.0.5"
webpki = "0.22.4"
x509-parser = "0.18.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
